[garizabalo] update home

--- a/index.html
+++ b/index.html
@@ -8,12 +8,35 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="./assets/css/main.css">
+
+    <!-- BOXICONS -->
+    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+
 </head>
 <body>
-    <!-- HEADER -->
-    <header></header>
+    <!-- NAVBAR -->
+    <header>
+        <div class="nav container">
+            <a href="index" class="logo"><img src="./assets/img/logo-garizabaloabogados.png" alt="garizabalo" width="70"></a>
+            <input type="checkbox" name="" id="menu">
+            <label for=""><i class="bx bx-menu" id="menu-icon"></i></label>
+            <ul class="navbar">
+                <li><a href="#inicio">Inicio</a></li>
+                <li><a href="#perfil">Perfil</a></li>
+                <li><a href="#servicios">Servicios</a></li>
+                <li><a href="#contacto">Contacto</a></li>
+            </ul>
+        </div>
+    </header>
     <!-- MAIN -->
-    <main></main>
+    <section class="home container" id="home">
+        <div class="home-text">
+            <h1>Asesorías jurídicas <br> Barranquilla</h1>
+            <a href="#" class="btn">Conctacto</a>
+        </div>
+    </section>
+
+    
     <!-- FOOTER -->
     <footer></footer>
 </body>
