--- a/index.html
+++ b/index.html
@@ -35,6 +35,40 @@
             <a href="#" class="btn">Conctacto</a>
         </div>
     </section>
+    <!-- NOSOTROS -->
+    <section class="about container" id="about">
+        <div class="about-img">
+            <img src="./assets/img/hero-garizabaloabogados.webp" alt="">
+        </div>
+        <div class="about-text">
+            <span>Sobre</span>
+            <h2>Nosotros</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates, odit!</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates, odit!</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates, odit!</p>
+            <a href="#" class="btn">Conocer de esto</a>
+        </div>
+    </section>
+
+    <!-- SERVICIOS -->
+    <section class="sales container" id="sales">
+
+        <div class="box">
+            <i class="bx bx-usar"></i>
+            <h3>Servicio 1</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia, odit!</p>
+        </div>
+        <div class="box">
+            <i class="bx bx-usar"></i>
+            <h3>Servicio 2</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia, odit!</p>
+        </div>
+        <div class="box">
+            <i class="bx bx-usar"></i>
+            <h3>Servicio 3</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia, odit!</p>
+        </div>
+    </section>
 
     
     <!-- FOOTER -->
