--- a/index.html
+++ b/index.html
@@ -52,19 +52,18 @@
 
     <!-- SERVICIOS -->
     <section class="sales container" id="sales">
-
         <div class="box">
-            <i class="bx bx-usar"></i>
+            <i class="bx bx-user"></i>
             <h3>Servicio 1</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia, odit!</p>
         </div>
         <div class="box">
-            <i class="bx bx-usar"></i>
+            <i class="bx bx-user"></i>
             <h3>Servicio 2</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia, odit!</p>
         </div>
         <div class="box">
-            <i class="bx bx-usar"></i>
+            <i class="bx bx-user"></i>
             <h3>Servicio 3</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia, odit!</p>
         </div>
