--- a/index.html
+++ b/index.html
@@ -69,6 +69,66 @@
         </div>
     </section>
 
+    <!-- lIBROS -->
+    <section class="properties container" id="properties">
+        <div class="heading">
+            <span>Recen</span>
+            <h2>Our Lorem, ipsum.</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, <br/>adipisicing elit. Exercitationem, nesciunt?</p>
+        </div>
+        <div class="properties-container container">
+            <div class="box">
+                <img src="./assets/img/hero-garizabalo.png" alt="" sizes="" srcset="">
+                <h3>$20</h3>
+                <div class="content">
+                    <div class="text">
+                        <h3>The Palace</h3>
+                        <P>Lorem, ipsum.</P>
+                    </div>
+                    <div class="icon">
+                        <i class='bx bx-book'></i>
+                    </div>
+                </div>
+            </div>
+
+            <div class="box">
+                <img src="./assets/img/hero-garizabalo.png" alt="" sizes="" srcset="">
+                <h3>$20</h3>
+                <div class="content">
+                    <div class="text">
+                        <h3>The Palace</h3>
+                        <P>Lorem, ipsum.</P>
+                    </div>
+                    <div class="icon">
+                        <i class='bx bx-book'></i>
+                    </div>
+                </div>
+            </div>
+
+            <div class="box">
+                <img src="./assets/img/hero-garizabalo.png" alt="" sizes="" srcset="">
+                <h3>$20</h3>
+                <div class="content">
+                    <div class="text">
+                        <h3>The Palace</h3>
+                        <P>Lorem, ipsum.</P>
+                    </div>
+                    <div class="icon">
+                        <i class='bx bx-book'></i><span>5</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- SUCRIBTORES -->
+    <section class="newsletter container">
+        <h2>Lorem ipsum dolor sit, <br> amet consectetur adipisicing.</h2>
+        <form action="">
+            <input type="email" name="" id="email-box" placeholder="tu@correo.com">
+            <input type="submit" value="send" class="btn">
+        </form>
+    </section>
     
     <!-- FOOTER -->
     <footer></footer>
