--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,11 +14,13 @@
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
 
 </head>
+
 <body>
     <!-- NAVBAR -->
     <header>
         <div class="nav container">
-            <a href="index" class="logo"><img src="./assets/img/logo-garizabaloabogados.png" alt="garizabalo" width="70"></a>
+            <a href="index" class="logo"><img src="./assets/img/logo-garizabaloabogados.png" alt="garizabalo"
+                    width="70"></a>
             <input type="checkbox" name="" id="menu">
             <label for=""><i class="bx bx-menu" id="menu-icon"></i></label>
             <ul class="navbar">
@@ -41,12 +44,16 @@
             <img src="./assets/img/hero-garizabaloabogados.webp" alt="">
         </div>
         <div class="about-text">
-            <span>Sobre</span>
-            <h2>Nosotros</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates, odit!</p>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates, odit!</p>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates, odit!</p>
-            <a href="#" class="btn">Conocer de esto</a>
+            <span>Sobre mí</span>
+            <h2>Perfil</h2>
+            <p>Egresado de Derecho de la Universidad del Atlántico de Colombia, con experiencia laboral en el sector
+                público y privado en el campo administrativo y de asistencia jurídica, en relación al Derecho cuenta con
+                un importante desarrollo profesional en las áreas del Derecho Laboral y el Derecho Civil, teniendo a la
+                fecha varios casos de éxito en el litigio jurídico, en el aspecto personal es una persona que se
+                interesa en los temas sociales y políticos de Colombia</p>
+            <div class="content-btn">
+                <a href="#" class="btn">Conocer de esto</a>
+            </div>
         </div>
     </section>
 
@@ -54,17 +61,17 @@
     <section class="sales container" id="sales">
         <div class="box">
             <i class="bx bx-user"></i>
-            <h3>Servicio 1</h3>
+            <h3>Asesorías jurídicas</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia, odit!</p>
         </div>
         <div class="box">
-            <i class="bx bx-user"></i>
-            <h3>Servicio 2</h3>
+            <i class='bx bx-hard-hat'></i>
+            <h3>Derecho Laboral</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia, odit!</p>
         </div>
         <div class="box">
-            <i class="bx bx-user"></i>
-            <h3>Servicio 3</h3>
+            <i class='bx bx-book-alt'></i>
+            <h3>Derecho Civil</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia, odit!</p>
         </div>
     </section>
@@ -74,7 +81,7 @@
         <div class="heading">
             <span>Recen</span>
             <h2>Our Lorem, ipsum.</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, <br/>adipisicing elit. Exercitationem, nesciunt?</p>
+            <p>Lorem ipsum dolor sit amet consectetur, <br />adipisicing elit. Exercitationem, nesciunt?</p>
         </div>
         <div class="properties-container container">
             <div class="box">
@@ -129,8 +136,9 @@
             <input type="submit" value="send" class="btn">
         </form>
     </section>
-    
+
     <!-- FOOTER -->
     <footer></footer>
 </body>
+
 </html>
