[garizabalo] open graph

--- a/index.html
+++ b/index.html
@@ -7,11 +7,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Garizabalo</title>
 
+    <!-- FAVICONS -->
+    <link rel="shortcut icon" href="./assets/img/favicon.png" type="image/x-icon">
+
     <!-- CSS -->
     <link rel="stylesheet" href="./assets/css/main.css">
 
     <!-- BOXICONS -->
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+
+    <!-- OPEN GRAPH -->
+
+    <meta property="og:title" content="Agobados en Barranquilla 🚀" />
+    <meta property="og:type" content="website" />
+    <meta property="og:description"
+        content="Agobados en Barranquilla, Asesorías jurídicas, Derecho laboral, Derecho civil.">
+    <meta property="og:url" content="https://garizabalo.com/" />
+    <meta property="og:image"
+        content="https://raw.githubusercontent.com/cristiangarizabalo/cristiangarizabalo.github.io/main/assets/img/hero-garizabalo.png" />
+
+    <!-- META DATOS -->
+
+    <meta name="description"
+        content="Agobados en Barranquilla, Asesorías jurídicas, Derecho laboral, Derecho civil.">
+    <meta name="keywords"
+        content="Agobados en Barranquilla, Asesorías jurídicas, Derecho laboral, Derecho civil.">
+    <meta name="author" content="Yair Garizabalo R.">
+
 
 </head>
 
@@ -79,14 +101,14 @@
     <!-- lIBROS -->
     <section class="properties container" id="properties">
         <div class="heading">
-            <span>Recen</span>
-            <h2>Our Lorem, ipsum.</h2>
+            <span>Estante</span>
+            <h2>Libros</h2>
             <p>Lorem ipsum dolor sit amet consectetur, <br />adipisicing elit. Exercitationem, nesciunt?</p>
         </div>
         <div class="properties-container container">
             <div class="box">
                 <img src="./assets/img/hero-garizabalo.png" alt="" sizes="" srcset="">
-                <h3>$20</h3>
+                <h3>2017</h3>
                 <div class="content">
                     <div class="text">
                         <h3>The Palace</h3>
@@ -100,7 +122,7 @@
 
             <div class="box">
                 <img src="./assets/img/hero-garizabalo.png" alt="" sizes="" srcset="">
-                <h3>$20</h3>
+                <h3>2019</h3>
                 <div class="content">
                     <div class="text">
                         <h3>The Palace</h3>
@@ -114,7 +136,7 @@
 
             <div class="box">
                 <img src="./assets/img/hero-garizabalo.png" alt="" sizes="" srcset="">
-                <h3>$20</h3>
+                <h3>2020</h3>
                 <div class="content">
                     <div class="text">
                         <h3>The Palace</h3>
@@ -133,7 +155,7 @@
         <h2>Lorem ipsum dolor sit, <br> amet consectetur adipisicing.</h2>
         <form action="">
             <input type="email" name="" id="email-box" placeholder="tu@correo.com">
-            <input type="submit" value="send" class="btn">
+            <input type="submit" value="Enviar" class="btn">
         </form>
     </section>
 
